--- a/chapter_descriptive.tex
+++ b/chapter_descriptive.tex
@@ -264,7 +264,7 @@ later). We previously showed that $\overline{X}$ converges to $\expect{X}$.
 Then you need some tools called \emph{Slutsky's theorem} to showed that the
 square of $\overline{X}$ converges to the square of $\overline{X}$ and that
 the difference between two random variables converges to the difference of the
-things they converge to.
+things they converge to. \hl{how does the first part arise?}
 
 Again, this isn't something that should concern the practical, data-minded
 scientist, but it is interesting to know that, when you peek under the hood,
