--- a/main.tex
+++ b/main.tex
@@ -47,6 +47,7 @@
 \section{Things to include}\label{things-to-include}
 
 \begin{itemize}
+\item Why can't we make confidence intervals with the LR test? Like, how big does a value have to be for us to reject the null? I imagine that this is an overly conservative approach, but I think it gives a nice exmaple of how to think about stuff.
 \item
   Cramer-Rao bound: inverse of Fisher information matrix is the lower
   bound for the variance of unbiased estimators. An estimator that hits
