edits to preface

--- a/main.tex
+++ b/main.tex
@@ -7,6 +7,7 @@
 \usepackage{longtable}
 \usepackage{booktabs}
 \usepackage{color,soul} % for hl
+\usepackage{fullpage}
 
 \providecommand{\tightlist}{%
   \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
@@ -17,7 +18,7 @@
  \newcommand{\cov}[1]{\mathrm{Cov}\!\left[{#1}\right]}
  \newcommand{\defeq}{\stackrel{\text{def}}{=}}
 
-\title{Statistic for people who do numbers and science}
+\title{Statistics for people who do numbers and science}
 \author{Scott W. Olesen}
 
 \begin{document}
@@ -25,7 +26,7 @@
 
 \frontmatter
 
-\include{preface}
+\include{chapter_preface}
 
 \mainmatter
 
